[package]
name = "IOCScanner"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.2", features = ["derive"] }   # CLI parsing
walkdir = "2.3"                                     # recursive directory traversal
regex = "1.11"                                      # pattern matching (IPs/domains/hashes)
rayon = "1.7"                                       # parallelism for speed
serde = { version = "1.0", features = ["derive"] }  # JSON serialization
serde_json = "1.0"                                  # emit JSON lines